services/store/external-pacs/dicom-web-multiplexer/dicom-web-multiplexer-chart/template.yaml
---
# Source: dicom-web-multiplexer-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dicom-web-multiplexer-service
  namespace: "services"
  labels:
    app-name: dicom-web-multiplexer
spec:
  selector:
    app-name: dicom-web-multiplexer
  ports:
    - name: dicom-web-http
      port: 8080 
      targetPort: 8080
      nodePort: 8080 # only for development!
  type: NodePort # only for development!
---
# Source: dicom-web-multiplexer-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dicom-web-multiplexer
  namespace: "services"
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: dicom-web-multiplexer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app-name: dicom-web-multiplexer
    spec:
      containers:
        - name: dicom-web-multiplexer
          image: "/dicom-web-multiplexer:"
          imagePullPolicy: ""
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "5Gi"
            requests:
              memory: "256Mi"
          volumeMounts:
            - name: dicom-web-multiplexer-dev
              mountPath: /app
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      imagePullSecrets:
        - name: registry-secret
      volumes:
        - name: dicom-web-multiplexer-dev
          persistentVolumeClaim:
            claimName: dicom-web-multiplexer-dev-pv-claim
      serviceAccountName: kaapana-kube-admin
---
# Source: dicom-web-multiplexer-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dicom-web-multiplexer-ingress
  namespace: "services"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "1000"
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /dicom-web-filter
        pathType: ImplementationSpecific
        backend:
          service:
            name: dicom-web-multiplexer-service
            port: 
              number: 8080
---
# Source: dicom-web-multiplexer-chart/templates/persistent_volume.yaml
# dev-files
---
# Source: dicom-web-multiplexer-chart/templates/update_airflow_scheduler_variables.yaml
# apiVersion: batch/v1
# kind: Job
# metadata:
#   name: revert-global-variables
#   namespace: "services"
# spec:
#   template:
#     spec:
#       restartPolicy: Never
#       containers:
#       - name: busybox
#         image: busybox
#         command:
#         - /bin/sh
#         - -c
#         - |
#           # Remove DICOM_WEB_SERVICE_RS and DICOM_WEB_SERVICE_URI lines from the config file
#           sed -i '/DICOM_WEB_SERVICE_RS = "http:\/\/dicom-web-multiplexer-service.*"/d' /kaapana/mounted/workflows/plugins/kaapana/blueprints/kaapana_global_variables.py
#           sed -i '/DICOM_WEB_SERVICE_URI = "http:\/\/dicom-web-multiplexer-service.*"/d' /kaapana/mounted/workflows/plugins/kaapana/blueprints/kaapana_global_variables.py
          
#           # Verify the changes
#           cat /kaapana/mounted/workflows/plugins/kaapana/blueprints/kaapana_global_variables.py
#         volumeMounts:
#         - name: airflow-plugins
#           mountPath: /kaapana/mounted/workflows/plugins
#       volumes:
#       - name: airflow-plugins
#         persistentVolumeClaim:
#           claimName: af-plugins-pv-claim
#   backoffLimit: 4
